Implemented check-uploaded
